syntax = "proto3";

package instances.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

message Secret {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string key = 2 [(validate.rules).string.min_len = 1];
  string value = 3;
}

message SecretId {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string component_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string install_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string secret_id = 5 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

// Temporary compatibility. Will rename and refactor to just Secret soon.
message Secret2 {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string component_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string install_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string secret_id = 5 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string key = 6 [(validate.rules).string.min_len = 1];
  string value = 7;
}

message GetSecretsRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string component_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string install_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
}

// GetSecretsResponse returns key/value secret parameters
// for the instance
message GetSecretsResponse {
  repeated Secret secrets = 1;
}

message UpsertSecretsRequest {
  repeated Secret2 secrets = 1;
}

message UpsertSecretsResponse {}

message DeleteSecretsRequest {
  repeated SecretId secret_ids = 1;
}

message DeleteSecretsResponse {}
