syntax = "proto3";

package instances.v1;

import "instances/v1/info.proto";
import "instances/v1/secrets.proto";
import "instances/v1/status.proto";

service InstancesService {
  rpc GetInfo(instances.v1.GetInfoRequest) returns (instances.v1.GetInfoResponse) {}
  rpc GetStatus(instances.v1.GetStatusRequest) returns (instances.v1.GetStatusResponse) {}
  rpc GetSecrets(instances.v1.GetSecretsRequest) returns (instances.v1.GetSecretsResponse) {}
  rpc UpsertSecrets(instances.v1.UpsertSecretsRequest) returns (instances.v1.UpsertSecretsResponse) {}
  rpc DeleteSecrets(instances.v1.DeleteSecretsRequest) returns (instances.v1.DeleteSecretsResponse) {}
}
